Adding the `CollectionUtils` class